--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.1.1",
     "expo": "~50.0.4",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.2"
+    "react-dom": "18.2.0",
+    "react-native": "0.73.2",
+    "react-native-sound": "^0.11.2",
+    "react-native-sound-player": "^0.13.2",
+    "react-native-web": "~0.19.6",
+    "expo-av": "~13.10.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
