--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react-native": "0.73.2",
     "react-native-draggable": "^3.3.0",
     "react-native-fs": "^2.20.0",
-    "react-native-gesture-handler": "^2.15.0",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-paper": "^5.12.3",
     "react-native-sound": "^0.11.2",
     "react-native-sound-player": "^0.13.2",
