--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@react-native-async-storage/async-storage": "1.21.0",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/stack": "^6.3.21",
+    "deprecated-react-native-prop-types": "^5.0.0",
     "expo": "~50.0.4",
     "expo-av": "~13.10.4",
     "expo-linear-gradient": "^12.7.2",
     "expo-status-bar": "~1.11.1",
+    "lottie-react-native": "^6.7.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.2",
@@ -24,6 +26,7 @@
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-paper": "^5.12.3",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-sound": "^0.11.2",
     "react-native-sound-player": "^0.13.2",
     "react-native-web": "~0.19.6"
